--- a/_data/presets-settings.yml
+++ b/_data/presets-settings.yml
@@ -1,1 +1,13 @@
 presets-instructions-vimeo-id: 663318015
+faqs:
+  - title: This is a question
+    description: This is an answer that's only shown when you click on it.
+  - title: This is another question
+    description: This is an answer that's only shown when you click on it.
+  - title: This is one more question
+    description: This is an answer that's only shown when you click on it.
+  - title: And again, I'm not even bored
+    description: This is an answer that's only shown when you click on it.
+ 
+
+ 
